conformance_test/positive_tests/B_matching_incoming_values/B01_template_matching/B0105_matching_character_pattern/B010505_pattern_compatibility/NegSyn_B010505_pattern_compatibility_001.ttcn
/******************************************************************************
 * Copyright (c) 2000-2016 Ericsson Telecom AB
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *   Adrien Kirjak – initial implementation
 *
 ** @version  0.0.1
 ** @purpose  1:B.1.5.0, Ensure that the IUT correctly handles character pattern metacharacters
 compatibility rules of template matching
 ** @verdict  pass reject
 ***************************************************/

module NegSyn_B010505_pattern_compatibility_001 { 	

    type component GeneralComp {}

	testcase TC_NegSyn_B010505_pattern_compatibility_001() runs on GeneralComp {

     	template charstring mw_matchingTemplate:= pattern "??riable reference";
     	var charstring mw_matchingTemplate_2:= pattern mw_matchingTemplate;    
		// error: Cannot assign a template to a non-template variable.
   
	}

	control{
    	execute(TC_NegSyn_B010505_pattern_compatibility_001());
	}

}
 
